--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_install:
   - docker build -f Dockerfile.dev -t vnscriptkid/react-app .
 
 script:
-  - docker run vnscriptkid/react-app npm run test -- --watchAll=false --coverage --watch=false
+  - docker run vnscriptkid/react-app npm run test:nowatch -- --watchAll=false --coverage --watch=false
